--- a/SourceCode/public/index.html
+++ b/SourceCode/public/index.html
@@ -8,11 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@800&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Shrikhand&family=Source+Sans+3:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Raleway&family=Rubik:wght@400;800&family=Shrikhand&family=Source+Sans+3:ital,wght@0,400;1,700&display=swap" rel="stylesheet">      name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
