--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@800&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Raleway&family=Rubik:wght@400;800&family=Shrikhand&family=Source+Sans+3:ital,wght@0,400;1,700&display=swap" rel="stylesheet">      name="description"
-      content="Web site created using create-react-app"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Raleway&family=Rubik:wght@400;800&family=Shrikhand&family=Source+Sans+3:ital,wght@0,400;1,700&display=swap" rel="stylesheet">      
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="./styles.css">
